# probe-rs-debugger-test

./: .gitignore  Cargo.toml  README.md  RP2040.code-workspace  armv6-probe-rs-debugger-test.code-workspace  armv7-probe-rs-debugger-test.code-workspace  build.rs  esp32c3.code-workspace  nrf52833.code-workspace  probe-rs-debugger-test.code-workspace  riscv-probe-rs-debugger-test.code-workspace  rust-toolchain.toml  stm32h745.code-workspace  test_esp32c3.sh
.cargo/: config.toml
.github/workflows/: build.yml
esp32c3/: Cargo.toml  esp32c3.code-workspace
esp32c3/.cargo/: config.toml
esp32c3/src/: main.rs
linker_files/: esp32c3_memory.x
linker_files/RP2040/: memory.x
linker_files/STM32C031C6Tx/: memory.x
linker_files/STM32H745ZITx/: memory.x
nrf52833/: Cargo.toml
nrf52833/.cargo/: config.toml
nrf52833/src/: main.rs
pico/: Cargo.toml  pico.code-workspace
pico/.cargo/: config.toml
pico/src/: main.rs
src/: common_testing_code.rs  lib.rs  main.rs
src/riscv32imac-unknown-none-elf/: esp32c3.rs
src/riscv32imc-unknown-none-elf/: esp32c3.rs
src/thumbv6m-none-eabi/: RP2040.rs  STM32C031C6Tx.rs
src/thumbv7em-none-eabihf/: STM32H745ZITx.rs  nRF52833_xxAA.rs
stm32h745/: Cargo.toml
stm32h745-defmt-rtt/: Cargo.toml  memory.x
stm32h745-defmt-rtt/.cargo/: config.toml
stm32h745-defmt-rtt/src/: main.rs
stm32h745/.cargo/: config.toml
stm32h745/src/: main.rs
svd_files/: RP2040.svd  STM32C031C6Tx.svd  STM32H745ZITx.svd  esp32c3.svd  nRF52833_xxAA.svd
xtask/: Cargo.toml
xtask/src/: main.rs
