[package]
name = "probe-rs-debugger-test"
description = "Test the probe-rs-debugger (and optionally VSCode extension) against various chips/boards"
version = "0.3.0"
authors = ["Jack Noppe <noppej@hotmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
autobins = false
autoexamples = false
autotests = false
autobenches = false
resolver = "2"

[lib]
name = "common_testing_code"
path = "src/common_testing_code.rs"

[[bin]]
name = "esp32c3"
path = "src/riscv32imc-unknown-none-elf/esp32c3.rs"
required-features = ["esp32c3"]

[[bin]]
name = "STM32C031C6Tx"
path = "src/thumbv6m-none-eabi/STM32C031C6Tx.rs"
required-features = ["STM32C031C6Tx"]

[[bin]]
name = "STM32H745ZITx"
path = "src/thumbv7em-none-eabihf/STM32H745ZITx.rs"
required-features = ["STM32H745ZITx"]

[[bin]]
name = "nRF52833_xxAA"
path = "src/thumbv7em-none-eabihf/nRF52833_xxAA.rs"
required-features = ["nRF52833_xxAA"]

[[bin]]
name = "RP2040"
path = "src/thumbv6m-none-eabi/RP2040.rs"
required-features = ["RP2040"]

[features]
esp32c3 = ["riscv", "esp32c3-hal", "semihosting"]
STM32C031C6Tx = [
    "cortex-m",
    "cortex-m-rt",
    "cortex-m/critical-section-single-core",
    "cortex-m/inline-asm",
]
STM32H745ZITx = [
    "cortex-m",
    "cortex-m-rt",
    "cortex-m/critical-section-single-core",
    "cortex-m/inline-asm",
]
nRF52833_xxAA = [
    "cortex-m",
    "cortex-m-rt",
    "nrf52833-hal",
    "cortex-m/critical-section-single-core",
    "cortex-m/inline-asm",
]
RP2040 = ["cortex-m", "cortex-m-rt", "rp-pico", "cortex-m/inline-asm"]

[dependencies]
# Dependencies shared between different hardware
rtt-target = { version = "0.5" }
heapless = { version = "0.8", default-features = false }

# Feature specific dependencies
nrf52833-hal = { version = "0.16", features = ["rt"], optional = true }

rp-pico = { version = "0.8.0", optional = true }

cortex-m = { version = "0.7.7", optional = true }
cortex-m-rt = { version = "0.7.3", optional = true }

esp32c3-hal = { version = "0.15.0", optional = true }
riscv = { version = "0.11.1", optional = true }
semihosting = {version = "0.1.5", optional = true}

[patch.crates-io]
esp32c3-hal = { git = "https://github.com/esp-rs/esp-hal" }


[profile.dev]
debug = "full"

[profile.debug-no-opt]
inherits = "dev"
opt-level = 0    # default is 0, and 1 = basic optimizations.
lto = "off"      # Link Time Optimizations

[profile.debug-lto-thin-opt-1]
inherits = "dev"
opt-level = 1    # default is 0, and 1 = basic optimizations.
lto = "thin"     # Link Time Optimizations

[profile.debug-lto-fat-opt-2]
inherits = "dev"
opt-level = 2    # default is 0, and 1 = basic optimizations.
lto = "fat"      # Link Time Optimizations
