[package]
name = "esp32c3"                                                                                   # TODO: Update project name
description = "Test the probe-rs-debugger (and optionally VSCode extension) against ESP32C3 board"
version = "0.1.0"
authors = ["Jack Noppe <noppej@hotmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
autobins = false
autoexamples = false
autotests = false
autobenches = false

[[bin]]
name = "esp32c3"     # TODO: Update binary name
path = "src/main.rs"

[dependencies]
# Dependencies for specific hardware
# TODO: Uncomment for Cortex-M
# cortex-m = "0.7"
# cortex-m-rt = "0.7"
# rtt-target = { version = "0.3.1", features = ["cortex-m"] }
# TODO: Uncomment for RISCV
riscv-rt = "0.8"
# rtt-target = { version = "0.3.1", features = ["riscv"] }
panic-halt = "0.2.0"

# Dependencies shared between different hardware
heapless = { version = "0.7.9", default-features = false }
# panic-probe = { version = "0.2", features = ["print-rtt"] }

[profile.dev]
codegen-units = 1 # better optimizations and easier ELF to debug the debugger
debug = true      # default is `false`; using `true` is also OK as the symbols reside on the host platform, not the target
lto = false       # better optimizations
